working prototype for one exercise

--- a/converted.Rmd
+++ b/converted.Rmd
@@ -1,5 +1,3 @@
-<script src="https://cdn.datacamp.com/datacamp-light-1.0.0.min.js"></script>
-
 
 ---
 title: "Untitled"
@@ -11,26 +9,7 @@ output: html_document
 This is an example exercise.
 
 
-<div data-datacamp-exercise data-lang="r"><code data-type="pre-exercise-code">
-b = 5
-</code><code data-type="sample-code">
-# Create the variable x, as rnorm(100)
-
-
-# Print out length of x
-
-</code><code data-type="solution">
-# Create a variable x, as rnorm(100)
-x = rnorm(100)
-
-# Print out a
-length(x)
-</code><code data-type="sct">
-test_function("rnorm")
-test_output_contains("100", incorrect_msg = "Have you printed out the length of `x`?")
-success_msg("Great!")
-</code><p data-type="hint">Try something else
-</p></div>
+datacamp_light_exercise_create_a
 
 
 ```{r}
@@ -40,28 +19,4 @@ success_msg("Great!")
 
 
 You can include a second exercise as well, like this: a sample code, solution code and sct suffise:
-
-<div data-datacamp-exercise data-lang="r"><code data-type="pre-exercise-code">
-b = 5
-</code><code data-type="sample-code">
-# Create the variable x, as rnorm(100)
-
-
-# Print out length of x
-
-</code><code data-type="solution">
-# Create a variable x, as rnorm(100)
-x = rnorm(100)
-
-# Print out a
-length(x)
-</code><code data-type="sct">
-test_function("rnorm")
-test_output_contains("100", incorrect_msg = "Have you printed out the length of `x`?")
-success_msg("Great!")
-</code><p data-type="hint">Try something else
-</p></div>
-
-
-
 
