--- a/inst/example_r.Rmd
+++ b/inst/example_r.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Example Document"
+title: "Example (R)"
 author: "Your name here"
 output: html_document
 ---
 
-This example document shows how you can embed interactive exercises in your R Markdown files.
+This example document shows how you can embed interactive R exercises in your R Markdown files.
 
 Suppose you want to explain people how variable assignment works in R. Create an exercise with a certain identifier, `create_a` in this case. Then, in different R code chunks, specify the elements of the exercise by setting the `type` inside the code chunk options.
 
