--- a/inst/example.Rmd
+++ b/inst/example.Rmd
@@ -4,9 +4,16 @@ author: "Your name here"
 output: html_document
 ---
 
-This example document shows how you can embed interactive exercises in your R Markdown files.
+You can use the `tutorial` package to convert static code chunks into 'fiddles', i.e. editors where people can experiment with your code. If you specify the `ex` and `type` properties, `tutorial` knows what to do:
 
-Suppose you want to explain people how variable assignment works in R. Create an exercise with a certain identifier, `create_a` in this case. Then, in different R code chunks, specify the elements of the exercise by setting the `type` inside the code chunk options.
+```{r, ex="play_around", type="sample-code"}
+a <- 2
+b <- 3
+
+a + b
+```
+
+You can also create interactive exercises right inside your R Markdown document. Suppose you want to explain people how variable assignment works in R. Create an exercise with a certain identifier, `create_a` in this case. Then, in different R code chunks, specify the elements of the exercise by setting the `type` inside the code chunk options.
 
 ```{r, ex="create_a", type="pre-exercise-code"}
 # This code is available in the workspace when the session initializes
@@ -39,13 +46,7 @@ success_msg("Great!")
 Here is a hint: use `<-` for assignment
 ```
 
-It's perfectly possible to still work with normal R markdown chunks, like this:
-
-```{r}
-head(mtcars, 4)
-```
-
-DataCamp Light also supports Python exercises. Suppose you want to explain people how variable assignment works in Python. Create an exercise with a certain identifier, `create_b` in this case. Then, in different Python code chunks, specify the elements of the exercise by setting the `type` inside the code chunk options.
+DataCamp Light also supports Python exercises. Let's create an exercise with a certain identifier, `create_b` in this case. Then, in different Python code chunks, specify the elements of the exercise by setting the `type` inside the code chunk options.
 
 ```{python, ex="create_b", type="pre-exercise-code"}
 ```
