--- a/vignettes/tutorial-basics.Rmd
+++ b/vignettes/tutorial-basics.Rmd
@@ -5,7 +5,7 @@ date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Tutorial Basics}
-  %\VignetteEngine{rmarkdown::tutorial}
+  %\VignetteEngine{tutorial::tutorial}
   %\VignetteEncoding{UTF-8}
 ---
 
