--- a/vignettes/tutorial-basics.Rmd
+++ b/vignettes/tutorial-basics.Rmd
@@ -43,6 +43,13 @@ a <- 2
 b <- 3
 ```
 
+To not clutter the code example, you might want to pre-load some data or load some packages beforehand. You can do this by specifying a chunk with `type = 'pre-exercise-code'`. Make sure you specify the same `ex` label to tie the `pre-exercise-code` to the correct `sample-code`:
+
+    ```{r ex="play_around", type="sample-code"}
+    c <- 4
+    library(dplyr)
+    ```
+    
 
 ## Interactive exercises
 
@@ -74,7 +81,7 @@ Next to fiddles, you can also code up entire interactive exercises with DataCamp
     success_msg("Great!")
     ```
     
-Converts to the following DataCamp Light exercise. The `pre-exercise-code` is run to initialize the R session. The `sample-code` is the 'form' to start from, The `solution` specifies the solution, and finally `sct` stands for Submission Correctness Test. These tests to check whether the student submitted the correct code, can be written with the [testwhat](https://www.github.com/datacamp/testwhat) package.
+Converts to the following DataCamp Light exercise. The `pre-exercise-code` initializes the R session. The `sample-code` is the fill-in form to start from, The `solution` specifies the solution, and finally `sct` stands for Submission Correctness Test. These tests to check whether the student submitted the correct code, can be written with the [`testwhat`](https://www.github.com/datacamp/testwhat) package.
 
 ```{r eval = FALSE, include = FALSE, ex="create_a", type="pre-exercise-code"}
 # This code is available in the workspace when the session initializes
@@ -130,3 +137,4 @@ with `python`:
 ```{python ex="play_around", type="sample-code"}
 ```
 
+For writing Submission Correctness tests, you can use the [`pythonwhat`](https://www.github.com/datacamp/pythonwhat) package, `testwhat`'s counterpart for Python exercises.
