massive clean up, update tests

--- a/inst/example.Rmd
+++ b/inst/example.Rmd
@@ -4,6 +4,10 @@ author: "Your name here"
 output: html_document
 ---
 
+```{r, include = FALSE}
+tutorial::go_interactive()
+```
+
 You can use the `tutorial` package to convert static code chunks into 'fiddles', i.e. editors where people can experiment with your code. If you specify the `ex` and `type` properties, `tutorial` knows what to do:
 
 ```{r, ex="play_around", type="sample-code"}
@@ -42,33 +46,5 @@ test_output_contains("a", incorrect_msg = "Make sure to print `a`")
 success_msg("Great!")
 ```
 
-```{r, ex="create_a", type="hint"}
-Here is a hint: use `<-` for assignment
-```
 
-DataCamp Light also supports Python exercises. Let's create an exercise with a certain identifier, `create_b` in this case. Then, in different Python code chunks, specify the elements of the exercise by setting the `type` inside the code chunk options.
-
-```{python, ex="create_b", type="pre-exercise-code"}
-```
-
-```{python, ex="create_b", type="sample-code"}
-# Create a variable b, equal to 4
-
-```
-
-```{python, ex="create_b", type="solution"}
-# Create a variable b, equal to 4
-b = 4
-```
-
-```{python, ex="create_b", type="sct"}
-test_object("b")
-success_msg("Great!")
-```
-
-```{python, ex="create_b", type="hint"}
-Here is a hint: use `=` for assignment.
-```
-
-Have fun teaching!
 
